--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ html, body {
   border: 0; }
 
 body {
-  font-family: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Open Sans', sans-serif;
   line-height: 1.5;
   background: #f5f5f6; }
   @media (max-width: 600px) {
@@ -497,7 +497,7 @@ footer {
       background-position: center;
       border-bottom: 1px #e7e7e8 solid;
       box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0);
-      transition: background-size .2s ease-out, box-shadow .1s ease-out; }
+      transition: background-size .2s ease-out, box-shadow .1s ease-out; }
     .gallery-item a:hover:before {
       background-size: 105%;
       box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.2); }
