--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ html, body {
   border: 0; }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.5;
   background: #f5f5f6; }
   @media (max-width: 600px) {
