--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,13 @@ body {
   margin-right: auto; }
 
 main {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   width: 100%;
   padding-top: 50px;
-  padding-bottom: 0; }
+  padding-bottom: 0;
+  }
   @media (max-width: 1000px) {
     main {
       padding-left: .25rem;
@@ -79,17 +83,20 @@ article {
 
 .list-row {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: row wrap;
   justify-content: flex-start;
   align-items: flex-start;
   list-style: none;
   margin: 0;
-  padding-left: 0; }
+  padding-left: 0;
+  }
   .list-row h4 {
     border-bottom: 1px #878787 solid; }
   .list-row > li {
-    width: 100%;
-    margin-bottom: 1rem; }
+    /* width: 100%; */
+    margin-bottom: 1rem;
+    margin-right: .5rem;
+    }
     .list-row > li:last-child {
       margin-bottom: 0; }
     .list-row > li span {
@@ -123,6 +130,32 @@ ul.column-list {
     margin-right: 1.75rem;
     margin-bottom: .5rem; }
 
+ul.article-list {
+  list-style: none;
+  padding-left: 0; }
+  ul.article-list > li {
+    margin-bottom: 2rem; }
+  ul.article-list ul {
+    list-style-type: disc; }
+
+.experience {
+  grid-row-end: span 2; }
+
+.logo {
+  width: 100%; }
+
+.client-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center; }
+  .client-list li {
+    width: 100%;
+    max-width: 33.333%;
+    padding: .5rem 1rem .5rem 0; }
+
 h1 {
   margin-bottom: 0;
   padding-bottom: 0;
@@ -142,8 +175,7 @@ h2 {
 h3 {
   margin-bottom: 2rem;
   font-size: 16px;
-  text-transform: uppercase;
-  text-align: center; }
+  text-transform: uppercase; }
 
 h4 {
   margin-bottom: .25rem;
@@ -163,42 +195,31 @@ a {
   color: inherit; }
 
 header {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
   color: #000;
+  padding: 1rem;
   border-bottom: 1px solid #e8e8e9;
   background: #fff; }
-  header .wrap {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    padding: 1rem; }
-    @media (max-width: 800px) {
-      header .wrap h2 {
-        margin-bottom: 0; } }
-    @media (max-width: 600px) {
-      header .wrap {
-        flex-direction: column;
-        padding-top: .75rem;
-        padding-bottom: .75rem;
-        align-items: center; } }
+  @media (max-width: 800px) {
+    header h2 {
+      margin-bottom: 0; } }
 
-.title {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center; }
-  .title h1 {
-    border-bottom-color: black; }
-  @media (max-width: 600px) {
-    .title {
-      margin-bottom: 1rem; } }
-  @media (max-width: 400px) {
-    .title {
-      width: 100%;
-      margin-bottom: 16px; }
-      .title h2 {
-        font-size: 1.1rem; } }
+.title h1 {
+  border-bottom-color: black; }
+
+@media (max-width: 600px) {
+  .title {
+    margin-bottom: 1rem; } }
+
+@media (max-width: 400px) {
+  .title {
+    width: 100%;
+    margin-bottom: 16px; }
+    .title h2 {
+      font-size: 1.1rem; } }
 
 @media (max-width: 400px) {
   .contact p {
@@ -415,8 +436,6 @@ footer {
   padding: 1rem 2rem;
   border: 1px solid #e8e8e9;
   background: #fff; }
-  .card:not(:last-child) {
-    margin-bottom: 40px; }
   @media (max-width: 550px) {
     .card {
       padding-left: .85rem;
@@ -462,26 +481,22 @@ footer {
 .gallery {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   list-style: none;
   margin: 0;
   padding: 0; }
 
 .gallery-item {
-  width: 100%;
-  max-width: 33.3333%;
-  padding: 1rem; }
+  width: calc(50% - .5rem);
+  padding: 0;
+  margin-bottom: 1rem; }
   @media (max-width: 900px) {
     .gallery-item {
       max-width: 50%; } }
   @media (max-width: 550px) {
     .gallery-item {
       max-width: 100%; } }
-  @media (min-width: 1200px) {
-    .gallery-item {
-      padding-left: 2rem;
-      padding-right: 2rem; } }
   .gallery-item a {
     display: block;
     border: 1px #e8e8e9 solid; }
