--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,27 +13,22 @@
 .gallery{
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
     list-style: none;
     margin: 0;
     padding: 0;
 }
 .gallery-item{
-    width: 100%;
-    max-width: 33.3333%;
-    padding: 1rem;
+    width: calc(50% - .5rem);
+    padding: 0;
+    margin-bottom: 1rem;
 
     @media (max-width: 900px){
         max-width: 50%;
     }
     @media (max-width: 550px){
         max-width: 100%;
-    }
-
-    @media (min-width: 1200px){
-        padding-left: 2rem;
-        padding-right: 2rem;
     }
 
     a{
