--- a/css/style.css
+++ b/css/style.css
@@ -58,12 +58,10 @@ body {
 
 main {
   display: grid;
-  grid-template-columns: 1.5fr 1fr 1fr;
+  grid-template-columns: 320px 2fr;
   grid-template-rows: 1fr 1fr;
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 0;
-  }
+  padding-bottom: 0; }
   @media (max-width: 1000px) {
     main {
       padding-left: .25rem;
@@ -82,21 +80,14 @@ article {
   margin: 0; }
 
 .list-row {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
   list-style: none;
   margin: 0;
-  padding-left: 0;
-  }
+  padding-left: 0; }
   .list-row h4 {
     border-bottom: 1px #878787 solid; }
   .list-row > li {
-    /* width: 100%; */
-    margin-bottom: 1rem;
-    margin-right: .5rem;
-    }
+    width: 100%;
+    margin-bottom: 1rem; }
     .list-row > li:last-child {
       margin-bottom: 0; }
     .list-row > li span {
@@ -144,17 +135,23 @@ ul.article-list {
 .logo {
   width: 100%; }
 
+.clients {
+  grid-column: 1 / -1; }
+
 .client-list {
   list-style: none;
   padding: 0;
   display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: center; }
+  align-items: center; }
+  @media (min-width: 1650px) {
+    .client-list {
+      display: flex;
+      flex-flow: row wrap;
+      align-items: center;
+      justify-content: center; } }
   .client-list li {
     width: 100%;
-    max-width: 33.333%;
-    padding: .5rem 1rem .5rem 0; }
+    margin-bottom: 3rem; }
 
 h1 {
   margin-bottom: 0;
