--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -25,11 +25,14 @@ body{
 }
 main{
     display: grid;
-    grid-template-columns: 1.5fr 1fr 1fr;
+    // grid-template-columns: 320px 2fr 240px;
+    // grid-template-rows: 1fr 1fr;
+
+    grid-template-columns: 320px 2fr;
     grid-template-rows: 1fr 1fr;
 
     width: 100%;
-    padding-top: 50px;
+    // padding-top: 50px;
     padding-bottom: 0;
 
     @media (max-width: 1000px) {
@@ -52,10 +55,6 @@ article{
 }
 
 .list-row{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
     list-style: none;
     margin: 0;
     padding-left: 0;
@@ -134,16 +133,25 @@ ul.article-list {
     width: 100%;
 }
 
+.clients {
+    grid-column: 1 / -1;
+}
+
 .client-list {
     list-style: none;
     padding: 0;
 
-    @include flex(row, wrap, center, center);
+    display: flex;
+    align-items: center;
+
+    @media (min-width: 1650px) {
+        @include flex(row, wrap, center, center);
+    }
 
     li {
         width: 100%;
-        max-width: 33.333%;
-        padding: .5rem 1rem .5rem 0;
-        // margin-bottom: 1rem;
+        // max-width: 33.333%;
+        // padding: .5rem 1rem .5rem 0;
+        margin-bottom: 3rem;
     }
 }
