--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,6 +5,8 @@ footer {
     align-items: flex-start;
     text-align: center;
     margin-top: 50px;
+    padding-left: 1rem;
+    padding-right: 2rem;
 
     .contact {
         text-align: right;
