--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ ul.tag-list {
   ul.tag-list li {
     display: inline-block;
     width: auto !important;
-    background: #c8d0ff;
+    background: #ddd;
     padding: 0 .5rem;
     border-radius: 4px; }
 
