--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -118,7 +118,7 @@ ul.column-list{
         li {
             display: inline-block;
             width: auto !important;
-            background: #c8d0ff;
+            background: #ddd;
             padding: 0 .5rem;
             border-radius: 4px;
     
