--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -102,6 +102,7 @@ ul.column-list{
     flex-flow: row wrap;
     justify-content: flex-start;
     align-items: flex-start;
+    margin-bottom: 0;
 
     li{
         margin-right: 1.75rem;
