--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,8 +5,7 @@ footer {
     align-items: flex-start;
     text-align: center;
     margin-top: 50px;
-    padding-left: 1rem;
-    padding-right: 2rem;
+    padding: 0 1rem 1rem;
 
     .contact {
         text-align: right;
